syntax = "proto3";

package externalscaler;

service ExternalScaler {
  rpc IsActive (ScaledObjectRef) returns (IsActiveResponse) {}
  rpc StreamIsActive (ScaledObjectRef) returns (stream IsActiveResponse) {}
  rpc GetMetricSpec (ScaledObjectRef) returns (GetMetricSpecResponse) {}
  rpc GetMetrics (ScaledObjectRef) returns (GetMetricsResponse) {}
}

message ScaledObjectRef {
    map<string, string> scalerMetadata = 3;
}

message IsActiveResponse {
  bool result = 1;
}

message MetricSpec {
  string metric_name = 1;
  int32 target_size = 2;
}

message GetMetricSpecResponse {
  repeated MetricSpec metric_specs = 1;
}

message GetMetricsRequest {
  repeated MetricIdentifier metric_identifiers = 1;
}

message MetricIdentifier {
  string metric_name = 1;
}

message MetricValue {
  string metric_name = 1;
  int64 metric_value = 2;
}

message GetMetricsResponse {
  repeated MetricValue metric_values = 1;
}
